--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,10 +2,62 @@
 @import "base"; 
 @import "breakpoint";
 
+.eePageWrap{
+	position: relative;
+}
 
 .eeContainer{
 	max-width: 1024px;
 	margin: 0 auto;
+}
+
+.eeCode{
+	position: absolute;
+	display: block;
+	font-size: 45px;
+	opacity: 0.5;
+	
+	&.html{
+		color: $color;
+		top: 10%;
+    	left: 25%; 
+	}
+	&.css{
+		color: $color3;
+		top: 10%;
+    	right: 25%;
+	}
+	&.jquery{
+		color: $color;
+		top: 35%;
+		right: 15%; 
+	}
+	&.javascript{
+		color: $color3;
+		top: 35%;
+		left: 15%; 
+	}
+	
+	&.php{
+		color: $color;
+		top: 55%;
+		left: 20%; 
+	}
+	&.mysql{
+		color: $color3;
+		top: 55%;
+		right: 20%; 
+	}
+	&.sass{
+		color: $color;
+		top: 75%;
+    	right: 25%; 
+	}
+	&.java{ 
+		color: $color3;
+		top: 75%;
+    	left: 25%;
+	}
 }
 
 header{
