--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -45,6 +45,7 @@ $base-font-size: 16px;
 $font: "Source Sans Pro", sans-serif;;
 $font2: "Droid Serif", serif;
 $font3: "Montserrat", sans-serif;
+$font4: "Arvo", serif;
 
 $color: #282621;
 $color2: #fff;
